fix wrapping on user area quotes

--- a/smiggins/less/home.less
+++ b/smiggins/less/home.less
@@ -71,7 +71,7 @@ button:not(.bottom-content-icon) {
     }
   }
 
-  .main-area {
+  .main-content {
     word-break: break-word;
     display: -webkit-box;
     line-clamp: 7;
@@ -107,6 +107,11 @@ button:not(.bottom-content-icon) {
       width: calc(100vw - (@post-margin-mobile * 2) - (@post-border-width * 4) - (@post-padding * 4));
       max-width: calc(@post-max-width - (@post-padding * 2) - (@post-border-width * 2));
       margin: calc(@post-spacing / 2) 0;
+    }
+
+    .displ-name-container {
+      width: calc(100vw - (@post-margin-mobile * 2) - (@post-border-width * 4) - (@post-padding * 4));
+      max-width: calc(@post-max-width - (@post-padding * 2) - (@post-border-width * 2));
     }
 
     .main-content {
